--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,18 @@ body {
   .eod h3 {
     margin-bottom: 10px;
   }
-  
+  h1{
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-style: wavy;
+  }
+  h3{
+    text-decoration: underline;
+    text-decoration-style: inherit;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+  }
   .eod ul {
     margin-bottom: 10px;
   }
@@ -114,5 +125,24 @@ body {
     opacity: 1;
   }
   
+
+  @media (width<500px) {
+    li{
+      
+    margin-bottom: 8px;
+
+    }
+      ul,ol{
+        padding: 0px 8px;
+        text-align: justify;
+      }
+      ol ul li{
+        margin-bottom: 2px;
+      }
+      h3{
+        text-align: justify;
+        /* font-size: unset; */
+      }
+  }
 
   
